<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="7dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp"
	    	android:text="@string/title_day"
	    	android:textStyle="bold" />
        
        <TextView
            android:id="@+id/day"
            android:layout_width="0dp"
	        android:layout_weight="4"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp"
	    	android:text="@string/day" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
        
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp"
	    	android:text="@string/title_weeks"
	    	android:textStyle="bold" />
        
        <TextView
            android:id="@+id/weeks"
            android:layout_width="0dp"
	        android:layout_weight="4"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp"
	    	android:text="@string/weeks" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
        
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp"
	    	android:text="@string/title_time"
	    	android:textStyle="bold" />
	
	    <TextView
	        android:id="@+id/time"
	        android:layout_width="0dp"
	        android:layout_weight="4"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:text="@string/time" />
	
	</LinearLayout> 
	   
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >	    
	    
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp"
	    	android:text="@string/title_type"
	    	android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/type"
	        android:layout_width="0dp"
	        android:layout_weight="4"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:text="@string/type" />
		    
	</LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >	    
	    
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp"
	    	android:text="@string/title_unit"
	    	android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/unit"
	        android:layout_width="0dp"
	        android:layout_weight="4"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:text="@string/unit" />
		    
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >	    
	    
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp"
	    	android:text="@string/title_stream"
	    	android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/stream"
	        android:layout_width="0dp"
	        android:layout_weight="4"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:text="@string/stream" />
		    
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >	    
	    
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dp"
	    	android:text="@string/title_venue"
	    	android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/venue"
	        android:layout_width="0dp"
	        android:layout_weight="4"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:text="@string/venue" />
		    
	</LinearLayout>
	    		
</LinearLayout>